--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="./assets/lugia.gif" alt="lugia" id="Lugia">
         </div>
 </div>
-<audio src="./assets/04 Pallet Town.mp3" id="Audio1" loop></audio>
+<audio src="./assets/04 Pallet Town.mp3" id="Audio1" autoplay loop></audio>
 <script src="./style.js"></script>
 </body>
 </html>
