--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
     <link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css" />
-    <link rel="stylesheet" href="./assets.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -43,6 +43,6 @@
         </div>
 </div>
 <audio src="./assets/04 Pallet Town.mp3" id="Audio1" autoplay loop></audio>
-<script src="./style.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
