--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="blueButtons">
                   <button type="button" id="musicStart" onclick="mStart()" class="nes-btn is-primary buttons-fix">▶</button><button type="button" onclick="mStop()" id="musicStop" class="nes-btn is-primary buttons-fix">||</button><button type="button" class="nes-btn is-primary buttons-fix"></button><button type="button" class="nes-btn is-primary buttons-fix"></button><button type="button" class="nes-btn is-primary buttons-fix"></button><button type="button" class="nes-btn is-primary buttons-fix"></button><button type="button" class="nes-btn is-primary buttons-fix"></button><button type="button" class="nes-btn is-primary buttons-fix"></button><button type="button" class="nes-btn is-primary buttons-fix"></button><button type="button" class="nes-btn is-primary buttons-fix"></button>
                 </div>
-                <button type="button" onclick="search(), summoner()" class="nes-btn is-warning go">GO</button>
+                <button type="button" onclick="search()" class="nes-btn is-warning go">GO</button>
             </div>
             <img src="./assets/lugia.gif" alt="lugia" id="Lugia">
         </div>
